samples/_failures_safe/1761225909_9f297d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81007c62.c: In function ‘main’:
./samples/SAFE/__tmp_81007c62.c:141:5: error: expected expression at end of input
  141 |     for (
      |     ^~~
./samples/SAFE/__tmp_81007c62.c:141:5: error: expected declaration or statement at end of input
